labs/lab6/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: k8s-demo
        image: k8s-demo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
