labs/lab6/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service
spec:
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
